--- a/css/home.css
+++ b/css/home.css
@@ -396,19 +396,19 @@ svg.wasClicked {
 }
 
 .circle:nth-child(2) {
-  animation-delay: 3s;
+  animation-delay: -3s;
 }
 
 .circle:nth-child(3) {
-  animation-delay: 6s;
+  animation-delay: -6s;
 }
 
 .circle:nth-child(4) {
-  animation-delay: 9s;
+  animation-delay: -9s;
 }
 
 .circle:nth-child(5) {
-  animation-delay: 12s;
+  animation-delay: -12s;
 }
 
 
